--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -190,7 +190,7 @@ span:hover {
     padding: 0rem;
     text-align: center;
     background-color: #0d0d0d;
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 30rem;
@@ -399,15 +399,10 @@ section.projetos {
     gap: 2rem;
     align-items: center;
     margin-bottom: 4rem;
-
-    /* background-color: rgba(255, 255, 255, 0.75);
-    padding: 3rem;
-    width: 900px;
-    border-radius: 2rem;
-    color: #000000; */
-
     background-color: rgba(255, 255, 255, 0.75);
-    padding: 3rem;
+    /* padding: 3rem; */
+    padding: 1rem;
+    /* schmutzig */
     width: 93%;
     max-width: 900px;
     border-radius: 2rem;
@@ -600,6 +595,9 @@ section.section.contato {
     img.svg {
         width: 6rem;
     }
+    .projetos div.container {
+        padding: 2rem;
+    }
    
 }
 @media (min-width: 576px) {
@@ -611,12 +609,11 @@ section.section.contato {
     span.material-symbols-outlined {
         font-size: 3.5rem;
         margin-right: 1rem;
-
-        color: seagreen;
     }
-
-
-
+    .projetos div.container {
+        padding: 2rem;
+        max-width: 550px;
+    }
 
 }
 @media (min-width: 768px) {
@@ -636,7 +633,6 @@ section.section.contato {
         text-align: center;
     }
     .whoAmI p {
-        /* text-indent: 3rem; */
         max-width: 40rem;
     }
     .whoAmI h2 {
@@ -689,6 +685,9 @@ section.section.contato {
     }
     .projetos div.container:nth-child(odd) {
         flex-direction: row-reverse;
+    }
+    .projetos div.container {
+        max-width: 950px;
     }
 }
 @media (min-width: 1200px) {
