--- a/restaurante/css/style.css
+++ b/restaurante/css/style.css
@@ -98,7 +98,7 @@ header a:hover {
 .home-section {
     min-height: 120vh;
     /* background-image: url('/imgs/home-restaurante.jpg'); */
-    background-image: url('/imgs/home-restaurante-4.jpg');
+    background-image: url("/imgs/home-restaurante-4.jpg");
     background-position: center center;
     background-size: cover;
     box-shadow: 0px 3px 6px #4848488e;
