--- a/restaurante/css/style.css
+++ b/restaurante/css/style.css
@@ -249,7 +249,7 @@ section.contact-section h2 {
 }
 .img-bg {
     /* background-image: url('/imgs/prato-2.jpg'); */
-    background-image: url('imgs/prato-2.jpg');
+    background-image: url('./imgs/prato-2.jpg');
     background-size: cover;
     width: 100%;
     height: 100vh;
