--- a/restaurante/css/style.css
+++ b/restaurante/css/style.css
@@ -98,10 +98,12 @@ header a:hover {
 .home-section {
     min-height: 120vh;
     /* background-image: url('/imgs/home-restaurante-otimizado.jpg'); */
-    background-image: url('imgs/home-restaurante-otimizado.jpg');
+    /* background-image: url('imgs/home-restaurante-otimizado.jpg'); */
+    background-image: url('home-restaurante-otimizado.jpg');
     background-position: center center;
     background-size: cover;
-    box-shadow: 0px 3px 6px #4848488e;
+    /* box-shadow: 0px 3px 6px #4848488e; */
+    box-shadow: 0px 3px 16px #a914148e;
     background-attachment: fixed;
 }
 h1 {
@@ -250,7 +252,7 @@ section.contact-section h2 {
 }
 .img-bg {
     /* background-image: url('/imgs/prato-fundo.jpg'); */
-    background-image: url('imgs/prato-fundo.jpg');
+    /* background-image: url('imgs/prato-fundo.jpg'); */
     background-size: cover;
     width: 100%;
     height: 100vh;
