--- a/restaurante/css/style.css
+++ b/restaurante/css/style.css
@@ -90,20 +90,59 @@ header a:hover::after {
 header a:hover {
     color: #3d3d3d;
 }
+.div-p-menu {
+    display: flex;
+}
 /* ///////////////////////////     fim do header    //////////////////////////////// */
 
+.menu {
+    width: 2rem;
+    margin-left: 1.5rem;
+    display: none;
+}
+.hidden {
+    position: fixed;
+    width: 100%;
+    background-color: #ffffff;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    overflow: hidden;
+    border-bottom: 1px solid #3d3d3dac;
+    z-index: 3;
+    transition: 1s;
+}
+.escondido {
+    height: 6rem;
+}
+.estendido {
+    height: 25.5rem;
+}
+.hidden .div-p-menu {
+    flex-direction: column;
+    width: 100%;
+}
+.hidden .div-p-menu p {
+    margin-bottom: .5rem;
+    border-top: 1px solid #807f7f5e;
+    width: 100%;
+    padding: .5rem;
+}
+
+
+
+/* /////////////////////////////////////// */
 .section {
     min-height: 100vh;
 }
 .home-section {
     min-height: 120vh;
-    background-image: url('/imgs/home-restaurante-otimizado.jpg');
-    /* background-image: url('imgs/home-restaurante-otimizado.jpg'); */
-    /* background-image: url('home-restaurante-otimizado.jpg'); */
+    background-image: url('home-restaurante-otimizado.jpg');
     background-position: center center;
     background-size: cover;
-    /* box-shadow: 0px 3px 6px #4848488e; */
-    box-shadow: 0px 3px 16px #50a9148e;
+    box-shadow: 0px 3px 6px #4848488e;
     background-attachment: fixed;
 }
 h1 {
@@ -251,8 +290,7 @@ section.contact-section h2 {
     margin: 0;
 }
 .img-bg {
-    /* background-image: url('/imgs/prato-fundo.jpg'); */
-    /* background-image: url('imgs/prato-fundo.jpg'); */
+    background-image: url('prato-fundo.jpg');
     background-size: cover;
     width: 100%;
     height: 100vh;
