--- a/restaurante/css/screen.css
+++ b/restaurante/css/screen.css
@@ -45,6 +45,9 @@
     h1 {
         font-size: 18rem;
     }
+    .home-section {
+        min-height: 100vh;
+    }
 }
 @media all and (max-width: 315px) {
     div.img-text img {
